Project

General

Profile

Actions

Bug #12645

closed

ext/socket fails to link on some Solaris 10 versions

Bug #12645: ext/socket fails to link on some Solaris 10 versions

Added by jkeiser (John Keiser) almost 10 years ago. Updated almost 10 years ago.

Status:
Closed
Assignee:
-
Target version:
-
[ruby-core:76646]

Description

The socket extension in core Ruby does not link due to a missing inet_ntop, which was added during the Solaris 10 series (10u7, I believe).

This patch gets it compiling again by creating a static inet_ntop (same as in getaddrbyname.c) on systems that do not have it. This definitely happens on 2.3.1 and definitely does not happen on 2.1.9. Not sure about 2.2.


Files

patch (1.02 KB) patch jkeiser (John Keiser), 08/01/2016 08:16 PM

Updated by normalperson (Eric Wong) almost 10 years ago Actions #1 [ruby-core:76647]

wrote:

The socket extension in core Ruby does not link due to a
missing inet_ntop, which was added during the Solaris 10
series (10u7, I believe).

This patch gets it compiling again by creating a static
inet_ntop (same as in getaddrbyname.c) on systems that do not
have it. This definitely happens on 2.3.1 and definitely does
not happen on 2.1.9. Not sure about 2.2.

That suggests we have a bug in the build system about detecting
and setting the correct flags for linkage and headers.

It's been many years since I touched Solaris, but I'm fairly
sure the function existed in 8, even if it's a different
signature as gnulib docs indicates:

https://bogomips.org/mirrors/gnulib.git/plain/doc/posix-functions/inet_ntop.texi

Updated by nobu (Nobuyoshi Nakada) almost 10 years ago Actions #2 [ruby-core:76649]

  • Status changed from Open to Feedback

Please show the mkmf.log file.

Updated by ngoto (Naohisa Goto) almost 10 years ago Actions #3 [ruby-core:76650]

That suggests we have a bug in the build system about detecting
and setting the correct flags for linkage and headers.

Not build system, but code itself. In ancdata.c, inet_ntop() is used without checking HAVE_INET_NTOP.
This might occur on every OS whose HAVE_INET_NTOP is 0.

The patch may work, but I think having the same code in two files is not good idea.

Updated by ngoto (Naohisa Goto) almost 10 years ago Actions #4 [ruby-core:76651]

  • Status changed from Feedback to Open

Updated by nobu (Nobuyoshi Nakada) almost 10 years ago Actions #5 [ruby-core:76655]

Does removing static from inet_ntop in option.c work?

Updated by nobu (Nobuyoshi Nakada) almost 10 years ago Actions #6

  • Status changed from Open to Closed

Applied in changeset r55797.


socket/option.c: inet_ntop

  • ext/socket/option.c, ext/socket/rubysocket.h (inet_ntop): share
    the fallback definition. [ruby-core:76646] [Bug #12645]

Updated by nagachika (Tomoyuki Chikanaga) almost 10 years ago Actions #7 [ruby-core:76666]

  • Backport set to 2.1: DONTNEED, 2.2: UNKNOWN, 2.3: REQUIRED

Updated by usa (Usaku NAKAMURA) almost 10 years ago Actions #8 [ruby-core:76729]

  • Backport changed from 2.1: DONTNEED, 2.2: UNKNOWN, 2.3: REQUIRED to 2.1: DONTNEED, 2.2: REQUIRED, 2.3: REQUIRED

Updated by usa (Usaku NAKAMURA) almost 10 years ago Actions #9 [ruby-core:76912]

  • Backport changed from 2.1: DONTNEED, 2.2: REQUIRED, 2.3: REQUIRED to 2.1: DONTNEED, 2.2: DONE, 2.3: REQUIRED

ruby_2_2 r55926 merged revision(s) 55797.

Updated by nagachika (Tomoyuki Chikanaga) almost 10 years ago Actions #10 [ruby-core:76970]

  • Backport changed from 2.1: DONTNEED, 2.2: DONE, 2.3: REQUIRED to 2.1: DONTNEED, 2.2: DONE, 2.3: DONE

ruby_2_3 r55960 merged revision(s) 55797.

Actions

Also available in: PDF Atom